compiler/src/antlr/delphiParser.java
// Generated from delphi.g4 by ANTLR 4.9.3
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class delphiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CLASS=1, CONSTRUCTOR=2, DESTRUCTOR=3, CREATE=4, PUBLIC=5, PRIVATE=6, BREAK=7, 
		CONTINUE=8, AND=9, ARRAY=10, BEGIN=11, BOOLEAN=12, CASE=13, CHAR=14, CHR=15, 
		CONST=16, DIV=17, DO=18, DOWNTO=19, ELSE=20, END=21, FILE=22, FOR=23, 
		FUNCTION=24, GOTO=25, IF=26, IN=27, INTEGER=28, LABEL=29, MOD=30, NIL=31, 
		NOT=32, OF=33, OR=34, PACKED=35, PROCEDURE=36, PROGRAM=37, REAL=38, RECORD=39, 
		REPEAT=40, SET=41, THEN=42, TO=43, TYPE=44, UNTIL=45, VAR=46, WHILE=47, 
		WITH=48, PLUS=49, MINUS=50, STAR=51, SLASH=52, ASSIGN=53, COMMA=54, SEMI=55, 
		COLON=56, EQUAL=57, NOT_EQUAL=58, LT=59, LE=60, GE=61, GT=62, LPAREN=63, 
		RPAREN=64, LBRACK=65, LBRACK2=66, RBRACK=67, RBRACK2=68, POINTER=69, AT=70, 
		DOT=71, DOTDOT=72, LCURLY=73, RCURLY=74, UNIT=75, INTERFACE=76, USES=77, 
		STRING=78, IMPLEMENTATION=79, TRUE=80, FALSE=81, WS=82, COMMENT_1=83, 
		COMMENT_2=84, IDENT=85, STRING_LITERAL=86, NUM_INT=87, NUM_REAL=88;
	public static final int
		RULE_program = 0, RULE_programHeading = 1, RULE_identifier = 2, RULE_block = 3, 
		RULE_usesUnitsPart = 4, RULE_labelDeclarationPart = 5, RULE_label = 6, 
		RULE_constantDefinitionPart = 7, RULE_constantDefinition = 8, RULE_constantChr = 9, 
		RULE_constant = 10, RULE_unsignedNumber = 11, RULE_unsignedInteger = 12, 
		RULE_unsignedReal = 13, RULE_sign = 14, RULE_bool_ = 15, RULE_string = 16, 
		RULE_typeDefinitionPart = 17, RULE_typeDefinition = 18, RULE_functionType = 19, 
		RULE_procedureType = 20, RULE_classDeclaration = 21, RULE_classType = 22, 
		RULE_classBody = 23, RULE_visibilitySection = 24, RULE_classMember = 25, 
		RULE_methodDecl = 26, RULE_constructorImplementation = 27, RULE_destructorImplementation = 28, 
		RULE_constructorDecl = 29, RULE_destructorDecl = 30, RULE_parameter = 31, 
		RULE_visibility = 32, RULE_variableDeclarationPart = 33, RULE_variableDeclaration = 34, 
		RULE_constructorCall = 35, RULE_methodImplementation = 36, RULE_type_ = 37, 
		RULE_simpleType = 38, RULE_scalarType = 39, RULE_subrangeType = 40, RULE_typeIdentifier = 41, 
		RULE_structuredType = 42, RULE_unpackedStructuredType = 43, RULE_stringtype = 44, 
		RULE_arrayType = 45, RULE_typeList = 46, RULE_indexType = 47, RULE_componentType = 48, 
		RULE_recordType = 49, RULE_fieldList = 50, RULE_fixedPart = 51, RULE_recordSection = 52, 
		RULE_variantPart = 53, RULE_tag = 54, RULE_variant = 55, RULE_setType = 56, 
		RULE_baseType = 57, RULE_fileType = 58, RULE_pointerType = 59, RULE_procedureAndFunctionDeclarationPart = 60, 
		RULE_procedureOrFunctionDeclaration = 61, RULE_procedureDeclaration = 62, 
		RULE_formalParameterList = 63, RULE_formalParameterSection = 64, RULE_parameterGroup = 65, 
		RULE_identifierList = 66, RULE_constList = 67, RULE_functionDeclaration = 68, 
		RULE_resultType = 69, RULE_statement = 70, RULE_unlabelledStatement = 71, 
		RULE_simpleStatement = 72, RULE_assignmentStatement = 73, RULE_variable = 74, 
		RULE_expression = 75, RULE_relationaloperator = 76, RULE_simpleExpression = 77, 
		RULE_additiveoperator = 78, RULE_term = 79, RULE_multiplicativeoperator = 80, 
		RULE_signedFactor = 81, RULE_factor = 82, RULE_unsignedConstant = 83, 
		RULE_functionDesignator = 84, RULE_parameterList = 85, RULE_set_ = 86, 
		RULE_elementList = 87, RULE_element = 88, RULE_procedureStatement = 89, 
		RULE_actualParameter = 90, RULE_parameterwidth = 91, RULE_gotoStatement = 92, 
		RULE_emptyStatement_ = 93, RULE_empty_ = 94, RULE_structuredStatement = 95, 
		RULE_compoundStatement = 96, RULE_statements = 97, RULE_conditionalStatement = 98, 
		RULE_ifStatement = 99, RULE_caseStatement = 100, RULE_caseListElement = 101, 
		RULE_repetetiveStatement = 102, RULE_whileStatement = 103, RULE_repeatStatement = 104, 
		RULE_forStatement = 105, RULE_breakStatement = 106, RULE_continueStatement = 107, 
		RULE_forList = 108, RULE_initialValue = 109, RULE_finalValue = 110, RULE_withStatement = 111, 
		RULE_recordVariableList = 112;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "programHeading", "identifier", "block", "usesUnitsPart", 
			"labelDeclarationPart", "label", "constantDefinitionPart", "constantDefinition", 
			"constantChr", "constant", "unsignedNumber", "unsignedInteger", "unsignedReal", 
			"sign", "bool_", "string", "typeDefinitionPart", "typeDefinition", "functionType", 
			"procedureType", "classDeclaration", "classType", "classBody", "visibilitySection", 
			"classMember", "methodDecl", "constructorImplementation", "destructorImplementation", 
			"constructorDecl", "destructorDecl", "parameter", "visibility", "variableDeclarationPart", 
			"variableDeclaration", "constructorCall", "methodImplementation", "type_", 
			"simpleType", "scalarType", "subrangeType", "typeIdentifier", "structuredType", 
			"unpackedStructuredType", "stringtype", "arrayType", "typeList", "indexType", 
			"componentType", "recordType", "fieldList", "fixedPart", "recordSection", 
			"variantPart", "tag", "variant", "setType", "baseType", "fileType", "pointerType", 
			"procedureAndFunctionDeclarationPart", "procedureOrFunctionDeclaration", 
			"procedureDeclaration", "formalParameterList", "formalParameterSection", 
			"parameterGroup", "identifierList", "constList", "functionDeclaration", 
			"resultType", "statement", "unlabelledStatement", "simpleStatement", 
			"assignmentStatement", "variable", "expression", "relationaloperator", 
			"simpleExpression", "additiveoperator", "term", "multiplicativeoperator", 
			"signedFactor", "factor", "unsignedConstant", "functionDesignator", "parameterList", 
			"set_", "elementList", "element", "procedureStatement", "actualParameter", 
			"parameterwidth", "gotoStatement", "emptyStatement_", "empty_", "structuredStatement", 
			"compoundStatement", "statements", "conditionalStatement", "ifStatement", 
			"caseStatement", "caseListElement", "repetetiveStatement", "whileStatement", 
			"repeatStatement", "forStatement", "breakStatement", "continueStatement", 
			"forList", "initialValue", "finalValue", "withStatement", "recordVariableList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'CLASS'", "'CONSTRUCTOR'", "'DESTRUCTOR'", "'CREATE'", "'PUBLIC'", 
			"'PRIVATE'", "'BREAK'", "'CONTINUE'", "'AND'", "'ARRAY'", "'BEGIN'", 
			"'BOOLEAN'", "'CASE'", "'CHAR'", "'CHR'", "'CONST'", "'DIV'", "'DO'", 
			"'DOWNTO'", "'ELSE'", "'END'", "'FILE'", "'FOR'", "'FUNCTION'", "'GOTO'", 
			"'IF'", "'IN'", "'INTEGER'", "'LABEL'", "'MOD'", "'NIL'", "'NOT'", "'OF'", 
			"'OR'", "'PACKED'", "'PROCEDURE'", "'PROGRAM'", "'REAL'", "'RECORD'", 
			"'REPEAT'", "'SET'", "'THEN'", "'TO'", "'TYPE'", "'UNTIL'", "'VAR'", 
			"'WHILE'", "'WITH'", "'+'", "'-'", "'*'", "'/'", "':='", "','", "';'", 
			"':'", "'='", "'<>'", "'<'", "'<='", "'>='", "'>'", "'('", "')'", "'['", 
			"'(.'", "']'", "'.)'", "'^'", "'@'", "'.'", "'..'", "'{'", "'}'", "'UNIT'", 
			"'INTERFACE'", "'USES'", "'STRING'", "'IMPLEMENTATION'", "'TRUE'", "'FALSE'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CLASS", "CONSTRUCTOR", "DESTRUCTOR", "CREATE", "PUBLIC", "PRIVATE", 
			"BREAK", "CONTINUE", "AND", "ARRAY", "BEGIN", "BOOLEAN", "CASE", "CHAR", 
			"CHR", "CONST", "DIV", "DO", "DOWNTO", "ELSE", "END", "FILE", "FOR", 
			"FUNCTION", "GOTO", "IF", "IN", "INTEGER", "LABEL", "MOD", "NIL", "NOT", 
			"OF", "OR", "PACKED", "PROCEDURE", "PROGRAM", "REAL", "RECORD", "REPEAT", 
			"SET", "THEN", "TO", "TYPE", "UNTIL", "VAR", "WHILE", "WITH", "PLUS", 
			"MINUS", "STAR", "SLASH", "ASSIGN", "COMMA", "SEMI", "COLON", "EQUAL", 
			"NOT_EQUAL", "LT", "LE", "GE", "GT", "LPAREN", "RPAREN", "LBRACK", "LBRACK2", 
			"RBRACK", "RBRACK2", "POINTER", "AT", "DOT", "DOTDOT", "LCURLY", "RCURLY", 
			"UNIT", "INTERFACE", "USES", "STRING", "IMPLEMENTATION", "TRUE", "FALSE", 
			"WS", "COMMENT_1", "COMMENT_2", "IDENT", "STRING_LITERAL", "NUM_INT", 
			"NUM_REAL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "delphi.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public delphiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public ProgramHeadingContext programHeading() {
			return getRuleContext(ProgramHeadingContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode DOT() { return getToken(delphiParser.DOT, 0); }
		public TerminalNode EOF() { return getToken(delphiParser.EOF, 0); }
		public TerminalNode INTERFACE() { return getToken(delphiParser.INTERFACE, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(226);
			programHeading();
			setState(228);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INTERFACE) {
				{
				setState(227);
				match(INTERFACE);
				}
			}

			setState(230);
			block();
			setState(231);
			match(DOT);
			setState(232);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramHeadingContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(delphiParser.PROGRAM, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(delphiParser.SEMI, 0); }
		public TerminalNode LPAREN() { return getToken(delphiParser.LPAREN, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(delphiParser.RPAREN, 0); }
		public TerminalNode UNIT() { return getToken(delphiParser.UNIT, 0); }
		public ProgramHeadingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programHeading; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterProgramHeading(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitProgramHeading(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitProgramHeading(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramHeadingContext programHeading() throws RecognitionException {
		ProgramHeadingContext _localctx = new ProgramHeadingContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programHeading);
		int _la;
		try {
			setState(248);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PROGRAM:
				enterOuterAlt(_localctx, 1);
				{
				setState(234);
				match(PROGRAM);
				setState(235);
				identifier();
				setState(240);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LPAREN) {
					{
					setState(236);
					match(LPAREN);
					setState(237);
					identifierList();
					setState(238);
					match(RPAREN);
					}
				}

				setState(242);
				match(SEMI);
				}
				break;
			case UNIT:
				enterOuterAlt(_localctx, 2);
				{
				setState(244);
				match(UNIT);
				setState(245);
				identifier();
				setState(246);
				match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(delphiParser.IDENT, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}
